# pesto

./: .gitattributes  .gitignore  BUILD_NATIVE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HYBRID_CPU_OPTIMIZATION.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_LICENSES  bench_pesto_vs_parpar.sh  bench_pesto_yenc_vs_node.sh  config.example.toml  zuzu.pesto-state
.github/workflows/: release-parmesan.yml  release-penne.yml  release-pesto.yml
bench/: README.md  lib.sh  par2.sh  posting.sh  yenc.sh  yencode.js
benches/: par2_encoder.rs  yenc.rs
crates/parmesan/: CHANGELOG.md  Cargo.toml  INTERNALS.md  README.md  RELEASING.md  ROADMAP.md
crates/parmesan-core/: Cargo.toml
crates/parmesan-core/src/: altmap.rs  encoder.rs  layout.rs  shuffle2x.rs  worker.rs
crates/parmesan-core/src/yenc/: mod.rs
crates/parmesan/benches/: decode_throughput.rs
crates/parmesan/src/: decoder.rs  encoder.rs  gf16.rs  gf16_mac.rs  lib.rs  main.rs  matrix.rs  ops.rs  packet.rs  packet_reader.rs  recovery_set.rs  repair.rs  test_support.rs  verify.rs  worker.rs
crates/parmesan/tests/: par2cmdline_compat.rs
crates/penne/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
crates/penne/src/: assemble.rs  cache.rs  check.rs  cleanup.rs  client.rs  config.rs  deobfuscate.rs  diskspace.rs  download.rs  extract.rs  health.rs  lib.rs  nzb.rs  progress.rs  queue.rs  quickcheck.rs  repair.rs  wizard.rs
crates/penne/src/ui/: check.rs  mod.rs  terminal.rs  verify.rs
crates/penne/tests/: check.rs  check_concurrency.rs  cli_download_end_to_end.rs  concurrency.rs  deobfuscate.rs  download_with_failover.rs  extract.rs  health.rs  quickcheck.rs  repair.rs  resilience.rs
crates/penne/tests/support/: mod.rs
crates/pesto/: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
crates/pesto-par2/: Cargo.toml
crates/pesto-par2/src/: encoder.rs  lib.rs  ops.rs
crates/pesto/examples/: mock_nntp_server.rs  yenc-bench-posting.rs  yenc-bench.rs
crates/pesto/examples/hooks/: generic-indexer.bat  generic-indexer.ps1  generic-indexer.sh  newznab-dedup.sh  other-indexer.ps1  other-indexer.sh  print-vars.sh
crates/pesto/src/: article.rs  cancel.rs  history.rs  hooks.rs  lib.rs  logging.rs  nfo.rs  nzb.rs  progress.rs  resume.rs  upload.rs  walk.rs
crates/pesto/src/config/: parse.rs  tests.rs  types.rs
crates/pesto/src/nntp/: mod.rs  pool.rs
crates/pesto/src/poster/: check.rs  mod.rs
crates/pesto/src/ui/: mod.rs  render.rs  terminal.rs
crates/pesto/src/yenc/: aarch64.rs  decode.rs  mod.rs  tests.rs
crates/pesto/tests/: batch_order.rs  check_fast_reposts_isolated_miss.rs  check_post_retries.rs  check_targets_posting_server.rs  full_file_crc32.rs  integration.rs  obfuscated_directory.rs  par2_directory.rs  par2_exact_multiple_of_slice_size.rs  par2_temp_dir_survives_post.rs  server_substituted_message_id.rs  streaming_check_overlaps_upload.rs  verify_fresh_message_id.rs
crates/sugo/: CHANGELOG.md  Cargo.toml  README.md
crates/sugo/assets/: style.css
crates/sugo/src/: config.rs  lib.rs  sse.rs  state.rs  static_assets.rs
crates/sugo/src/api/: addfile.rs  addurl.rs  fullstatus.rs  get_config.rs  history.rs  mod.rs  queue.rs  version.rs
crates/sugo/src/job/: mod.rs  pipeline.rs  worker.rs
crates/sugo/src/web/: dashboard.rs  history.rs  mod.rs  settings.rs
crates/sugo/templates/: base.html  dashboard.html  history.html  settings.html
crates/sugo/templates/partials/: queue_list.html
crates/sugo/tests/: api_addfile.rs  api_queue.rs  end_to_end.rs  settings.rs
crates/sugo/tests/support/: mod.rs
crates/upapasta/: Cargo.toml  README.md  ROADMAP.md
crates/upapasta/src/: app.rs  events.rs  hooks.rs  main.rs  nzb_viewer.rs  prowlarr.rs
crates/upapasta/src/catalog/: mod.rs
crates/upapasta/src/ui/: mod.rs  theme.rs
crates/upapasta/src/ui/components/: file_tree.rs  log_panel.rs  mod.rs  status_bar.rs  upload_queue.rs
examples/: yenc-bench-parallel.rs  yenc-bench-posting.rs  yenc-bench.rs
examples/hooks/: curupira.sh  other-indexer.sh
src/: article.rs  compress.rs  config.rs  history.rs  indexer.rs  lib.rs  logging.rs  main.rs  nfo.rs  notify.rs  nzb.rs  poster.rs  progress.rs  walk.rs  yenc.rs
src/config/: mod.rs  parse.rs  tests.rs  types.rs
src/nntp/: mod.rs  pool.rs
src/par2/: altmap.rs  encoder.rs  gf16.rs  mod.rs  packet.rs
src/poster/: mod.rs  par2_worker.rs
src/ui/: mod.rs  terminal.rs  wizard.rs
src/yenc/: aarch64.rs  scalar.rs  tables.rs  x86.rs
tests/: integration.rs  obfuscated_directory.rs  par2_cmdline.rs  par2_directory.rs
