[workspace]
members = [
    ".",
    "crates/parmesan-core",
    "crates/parmesan",
]

[package]
name = "pesto-poster"
version = "0.2.21"
edition = "2021"
rust-version = "1.89"
description = "Fast, lean Usenet poster: yEnc, NNTP and .nzb generation"
license = "MIT"
repository = "https://github.com/franzopl/pesto"
homepage = "https://github.com/franzopl/pesto"
documentation = "https://github.com/franzopl/pesto#readme"
readme = "README.md"
keywords = ["usenet", "nntp", "yenc", "nzb", "par2"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["test_results/", "screenshot-*.png", "Terapia atraves da Escrita*/"]

[[bin]]
name = "pesto"
path = "src/main.rs"

[lib]
name = "pesto"
path = "src/lib.rs"

[dependencies]
parmesan-core = { path = "crates/parmesan-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
md-5 = { version = "0.10", features = ["asm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "fs", "signal", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"
rayon = "1.12.0"
crc32fast = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "multipart"] }
sha2 = "0.10"
tempfile = "3"
sysinfo = { version = "0.36.1", default-features = false, features = ["system"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Exposes internal per-path flush functions for micro-benchmarking individual SIMD paths.
# Never enable this in production builds.
bench-internals = ["parmesan-core/bench-internals"]
# Exposes the AVX2+GFNI and AVX-512+GFNI flush paths for testing/benchmarking.
par2-avx2-gfni-unsafe = ["parmesan-core/par2-avx2-gfni-unsafe"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }

[[bench]]
name = "par2_encoder"
harness = false
required-features = ["bench-internals"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
