[workspace]
resolver = "2"
members = [
    "crates/parmesan",
    "crates/pesto",
    "crates/upapasta",
]

[workspace.package]
version = "0.3.41"
edition = "2021"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/franzopl/pesto"
homepage = "https://github.com/franzopl/pesto"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
