[package]
name = "parmesan-par2"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Fast, standalone PAR2 (Reed-Solomon) creation tool"
license = "MIT"
repository = "https://github.com/franzopl/pesto"
homepage = "https://github.com/franzopl/pesto/tree/main/crates/parmesan"
documentation = "https://docs.rs/parmesan-par2"
readme = "README.md"
keywords = ["par2", "reed-solomon", "usenet", "repair", "parity"]
categories = ["command-line-utilities", "encoding"]
exclude = ["/benches", "/tests"]

[lib]
name = "parmesan"
path = "src/lib.rs"

[[bin]]
name = "parmesan"
path = "src/main.rs"

[dependencies]
rayon = "1.12.0"
md-5 = "0.10"
crc32fast = "1.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
walkdir = "2"

[features]
bench-internals = []
par2-avx2-gfni-unsafe = []

[dev-dependencies]
proptest = "1.11.0"
