[package]
name = "upapasta"
version = "0.1.0"
edition = "2021"
description = "Complete Usenet upload suite with TUI, catalog, and intelligent orchestration. Built on top of the pesto engine."
license = "MIT"
repository = "https://github.com/franzopl/pesto"
homepage = "https://github.com/franzopl/pesto"
readme = "README.md"

[dependencies]
pesto = { path = "../pesto" }
parmesan = { package = "parmesan-par2", path = "../parmesan" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
tokio-util = "0.7"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []

[[bin]]
name = "upapasta"
path = "src/main.rs"
